--- a/sm64tls/sm64tls.html
+++ b/sm64tls/sm64tls.html
@@ -12,22 +12,22 @@
         <div class="flex-container">
             <div class="content1">
                 <a href="#histoire">
-                    <button class="button button1">Histoire du jeu</button>
+                    <button class="button button1"><i>Histoire du jeu</i></button>
                 </a>
             </div>
             <div class="content2">
                 <a href="#dev">
-                    <button class="button button2">Développement</button>
+                    <button class="button button2"><i>Développement</i></button>
                 </a>
             </div>
             <div class="content3">
                 <a href="#gameplay">
-                    <button class="button button3">Gameplay</button>
+                    <button class="button button3"><i>Gameplay</i></button>
                 </a>
             </div>
             <div class="content4">
                 <a href="#credits">
-                    <button class="button button4">Crédits</button>
+                    <button class="button button4"><i>Crédits</i></button>
                 </a>
             </div>
         </div>
@@ -41,7 +41,7 @@
         </section>
 
         <section class="center-text">
-            <p>Super Mario 64 : The Lost Stars, c'est mes premier pas vers le monde du développement de jeux vidéos. Graçe à ce projet, j'ai pu me confronter à des situations de développement d'un jeu de platforme, ainsi que les différentes problématiques qui viennet avec.</p>
+            <p><b>Super Mario 64 : The Lost Stars</b>, c'est mes premier pas vers le monde du développement de jeux vidéos. Graçe à ce projet, j'ai pu me confronter à des situations de développement d'un jeu de platforme, ainsi que les différentes problématiques qui viennet avec.</p>
         </section>
 
         <section class="text-image">
@@ -62,7 +62,6 @@
         <section class="large-image">
             <img src="media\intro.png" alt="Grande image">
             <h2>Super Mario 64 : The Lost Stars</h2>
-            <p>Super Mario™ est une licence appartenant à Nintendo. Super Mario 64™ est un jeu créer, édité et publié par Nintendo®. SM64: The Lost Stars est une rom hack réalisé par moi-même à but non lucratif. SM64: The Lost Stars n'est pas partagable ou téléchargable sur Internet et ne le sera jamais. Tout les droits reviennent à Nintendo of America® ainsi que Nintendo Japan®.</p>
         </section>
     </main>
 
@@ -83,17 +82,17 @@
 
         <section class="text-image">
             <img src="media\sketchuplogo.png" alt="Description de l'image">
-            <p>SketchUp 2017: un logiciel de modélisation 3D, il me pemettait de modéliser et texturer les niveaux avant de les exporter en .OBJ.</p>
+            <p><b>SketchUp 2017:</b> un logiciel de modélisation 3D, il me pemettait de modéliser et texturer les niveaux avant de les exporter en .OBJ.</p>
         </section>
 
         <section class="text-image">
             <img src="media\sm64lilogo.png" alt="Description de l'image">
-            <p>SM64 Level Importer. Le logiciel d'importation. Il fait la passerelle entre SketchUp et Super Mario 64. Il permet d'importer des niveaux en format .OBJ ainsi que les textures en remplaçant un niveau déjà existant. Il permet aussi d'atribuer les ennemies du niveau, la skybox ainsi que la musique. Il permet également de donner des propriétées aux textures du niveau (faire en sorte qu'une texture soit reconnue comme de la lave, de l'eau, du poison...) ainsi que de générer du mouvement dans la texture.</p>
+            <p><b>SM64 Level Importer:</b> Le logiciel d'importation. Il fait la passerelle entre SketchUp et Super Mario 64. Il permet d'importer des niveaux en format .OBJ ainsi que les textures en remplaçant un niveau déjà existant. Il permet aussi d'atribuer les ennemies du niveau, la skybox ainsi que la musique. Il permet également de donner des propriétées aux textures du niveau (faire en sorte qu'une texture soit reconnue comme de la lave, de l'eau, du poison...) ainsi que de générer du mouvement dans la texture.</p>
         </section>
 
         <section class="text-image">
             <img src="media\TT64logo.png" alt="Description de l'image">
-            <p>Toad's Tool 64. Le logiciel de gestion de niveaux. C'est ce logiciel qui permet de positioner les éléments qui composent le niveau: Les étoiles de puissances (ainsi que leur ordre), les enemies, les boss, les power up, les collectibles etc... Il permet aussi de modifier les éléments HUD du jeu, comme la barre d'énergie, les logos (tête de Mario, compteur d'étoiles...), ainsi que des textures d'objets, comme les visages des ennemies, de Mario...</p>
+            <p><b>Toad's Tool 64:</b> Le logiciel de gestion de niveaux. C'est ce logiciel qui permet de positioner les éléments qui composent le niveau: Les étoiles de puissances (ainsi que leur ordre), les enemies, les boss, les power up, les collectibles etc... Il permet aussi de modifier les éléments HUD du jeu, comme la barre d'énergie, les logos (tête de Mario, compteur d'étoiles...), ainsi que des textures d'objets, comme les visages des ennemies, de Mario...</p>
         </section>
 
         <section class="center-text">
@@ -134,11 +133,6 @@
                 Votre navigateur ne supporte pas la lecture vidéo.
             </video>
         </section>
-
-        <section class="copyrights">
-          <p>Super Mario™ est une licence appartenant à Nintendo ®. Super Mario 64™ est un jeu créer, édité et publié par Nintendo ®. SM64: The Lost Stars est une rom hack réalisé par moi-même à but non lucratif. SM64: The Lost Stars n'est pas partagable ou téléchargable sur Internet et ne le sera jamais. Tout les droits reviennent à Nintendo of America ® ainsi que Nintendo Japan ®.</p>  
-        </section>
-        
     </main>
 
     <hr>
@@ -150,21 +144,21 @@
 
         <section class="text-image-credits">
             <img src="media\sketchuplogo.png" alt="Description de l'image">
-            <p>SketchUp 2017: Trimble</p>
+            <p><b>SketchUp 2017:</b> Trimble</p>
         </section>
 
         <section class="text-image-credits">
             <img src="media\logosm64li.png" alt="Description de l'image">
-            <p>SM64 Level Importer: PablosCorner, Skelux</p>
+            <p><b>SM64 Level Importer:</b> PablosCorner, Skelux</p>
         </section>
 
         <section class="text-image-credits">
             <img src="media\logott64.png" alt="Description de l'image">
-            <p>Toad's Tool 64: VL-Tone, Skelux.</p>
+            <p><b>Toad's Tool 64:</b> VL-Tone, Skelux.</p>
         </section>
 
         <section class="copyrights">
-          <p>Super Mario™ est une licence appartenant à Nintendo ®. Super Mario 64™ est un jeu créer, édité et publié par Nintendo ®. SM64: The Lost Stars est une rom hack réalisé par moi-même à but non lucratif. SM64: The Lost Stars n'est pas partagable ou téléchargable sur Internet et ne le sera jamais. Tout les droits reviennent à Nintendo of America ® ainsi que Nintendo Japan ®.</p>  
+          <p>Super Mario™ est une licence appartenant à Nintendo ®. Super Mario 64™ est un jeu créer, éditer et publier par Nintendo ®. SM64: The Lost Stars est une rom hack réalisé par moi-même à but non lucratif. SM64: The Lost Stars n'est pas partagable ou téléchargable sur Internet et ne le sera jamais. Tout les droits reviennent à Nintendo of America ® ainsi que Nintendo Japan ®.</p>  
         </section>
         
     </main>
