--- a/sm64tls/sm64tls.html
+++ b/sm64tls/sm64tls.html
@@ -118,6 +118,8 @@
         </section>
     </main>
 
+    <button id="topButton" onclick="scrollToTop()">Retour en haut</button>
+
     <script src="sm64tls.js"></script>
 </body>
 </html>
