--- a/sm64tls/sm64tls.html
+++ b/sm64tls/sm64tls.html
@@ -37,9 +37,9 @@
             <img src="media/screen2.png" alt="Capture d'écran du jeu">
         </section>
 
-        <section class="text-image right">
-            <p>Des plaines verdoyantes aux fonds marins, en passant par l’espace, le jeu propose quatre nouveaux mondes et 24 étoiles de puissance à collectionner !</p>
+        <section class="text-image">
             <img src="media/screen3.png" alt="Capture d'écran du jeu">
+            <p>Des plaines verdoyantes aux fonds marins, en passant par l’espace, le jeu propose quatre nouveaux mondes et 24 étoiles de puissance à collectionner !</p>
         </section>
     </main>
 
@@ -117,6 +117,16 @@
             <p>Super Mario™ est une licence appartenant à Nintendo®. Super Mario 64™ est un jeu créé, édité et publié par Nintendo®. SM64: The Lost Stars est une ROM hack réalisée à titre non lucratif. Ce projet n'est pas partageable ni téléchargeable sur Internet. Tous les droits reviennent à Nintendo.</p>
         </section>
     </main>
+
+    <footer class="fade-in">
+        <h1>Navigation</h1>
+        <nav class="flex-container">
+            <a href="#histoire"><button class="button button1">Accueil</button></a>
+            <a href="#dev"><button class="button button2">Frise Chronologique</button></a>
+            <a href="#gameplay"><button class="button button3">Gameplay</button></a>
+            <a href="#credits"><button class="button button4">Crédits</button></a>
+        </nav>
+    </footer>
 
     <button id="topButton" onclick="scrollToTop()">Retour en haut</button>
 
