sm64tls final v1

--- a/sm64tls/sm64tls.html
+++ b/sm64tls/sm64tls.html
@@ -24,6 +24,9 @@
     <main class="fade-in">
         <section id="histoire" class="center-text">
             <h1>Histoire</h1>
+        </section>
+
+        <section class="center-text">
             <p><b>Super Mario 64: The Lost Stars</b> est mon premier projet dans le monde du développement de jeux vidéo. Grâce à cette aventure, j'ai découvert les défis de la création d'un jeu de plateforme en 3D et appris à résoudre les problèmes techniques qui en découlent.</p>
         </section>
 
@@ -32,7 +35,7 @@
             <p>L’histoire se déroule après les événements de Super Mario 64. Mario doit retrouver des étoiles de puissance cachées par Bowser, qui cherche à s'emparer du Royaume Champignon.</p>
         </section>
 
-        <section class="text-image reverse">
+        <section class="text-image right">
             <p>Pour contrecarrer les plans de Bowser, Mario devra explorer de nouveaux mondes et récupérer les étoiles dissimulées à travers ces niveaux inédits.</p>
             <img src="media/screen2.png" alt="Capture d'écran du jeu">
         </section>
@@ -50,6 +53,9 @@
     <main class="fade-in">
         <section id="dev" class="center-text">
             <h1>Développement</h1>
+        </section>
+
+        <section class="center-text">
             <p>Ce projet m'a permis d'explorer le level design et d’apprendre à concevoir des niveaux dynamiques, placer des obstacles, intégrer des bonus, et équilibrer la difficulté.</p>
         </section>
 
@@ -71,6 +77,30 @@
             <img src="media/TT64logo.png" alt="Logo Toad’s Tool 64">
             <p><b>Toad’s Tool 64 :</b> Cet éditeur m’a permis de positionner les objets du niveau : étoiles, ennemis, power-ups, éléments de HUD et textures d’objets.</p>
         </section>
+
+        <section class="center-text">
+            <p>Ces trois outils combinés permettent de créer un niveau complet. Voici le processus de développement :</p>
+        </section>
+
+        <section class="text-image">
+            <img src="media\sketchup.png" alt="Description de l'image">
+            <p>Tout commence par la modélisation et la texturation du niveau dans SketchUp.</p>
+        </section>
+
+        <section class="text-image right">
+            <p>Ensuite, le niveau est importé dans le jeu. On y intègre les ennemis, la musique, et on attribue aux textures les propriétés adéquates avant de sélectionner une skybox correspondant à l'univers du niveau.</p>
+            <img src="media\sm64li.png" alt="Description de l'image">
+        </section>
+
+        <section class="text-image">
+            <img src="media\tt64.png" alt="Description de l'image">
+            <p>Enfin, l’étape finale consiste à utiliser Toad's Tool 64 pour placer les éléments de gameplay et peaufiner le level design.</p>
+        </section>
+
+        <section class="large-image">
+            <img src="media\screen2.png" alt="Grande image">
+            <h2>Et pour terminer, vient la phase de test et d'ajustements !</h2>
+        </section>
     </main>
 
     <div class="fade-in">
@@ -80,6 +110,9 @@
     <main class="fade-in">
         <section id="gameplay" class="center-text">
             <h1>Gameplay</h1>
+        </section>
+
+        <section>
             <div class="center-video">
                 <video controls>
                     <source src="media/Portfolio_Naim_Ben_Amar.mp4" type="video/mp4">
@@ -114,17 +147,22 @@
         </section>
 
         <section class="copyrights">
-            <p>Super Mario™ est une licence appartenant à Nintendo®. Super Mario 64™ est un jeu créé, édité et publié par Nintendo®. SM64: The Lost Stars est une ROM hack réalisée à titre non lucratif. Ce projet n'est pas partageable ni téléchargeable sur Internet. Tous les droits reviennent à Nintendo.</p>
+            <p>Super Mario™ est une licence appartenant à Nintendo®. Super Mario 64™ est un jeu créé, édité et publié par Nintendo®. SM64: The Lost Stars est une ROM hack réalisée à titre non lucratif. Ce projet n'est pas partageable ni téléchargeable sur Internet. Tous les droits reviennent à Nintendo®.</p>
+        </section>
+    </main>
+
+    <main class="fade-in">
+        <section class="button-after">
+            <a href="#histoire"><button class="button button5">Call of Duty : World at War ---></button></a>
         </section>
     </main>
 
     <footer class="fade-in">
         <h1>Navigation</h1>
         <nav class="flex-container">
-            <a href="#histoire"><button class="button button1">Accueil</button></a>
-            <a href="#dev"><button class="button button2">Frise Chronologique</button></a>
-            <a href="#gameplay"><button class="button button3">Gameplay</button></a>
-            <a href="#credits"><button class="button button4">Crédits</button></a>
+            <a href="\PortfolioWeb\index.html"><button class="button button1">Accueil</button></a>
+            <a href="\PortfolioWeb\frise.html"><button class="button button2">Frise Chronologique</button></a>
+            <a href="\PortfolioWeb\galerie.html"><button class="button button3">Gallerie</button></a>
         </nav>
     </footer>
 
